<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageview"
        android:layout_width="148dp"
        android:layout_height="121dp"
        android:contentDescription="@string/todo"
        android:padding="20dp"
        android:src="@drawable/bubsy"
        android:onClick="ImageClick"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="40dp">

        <TextView
            android:id="@+id/textview1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bubsy_the_woolies_strike_back"
            android:textColor="@color/cardview_dark_background" />

        <TextView
            android:id="@+id/textview2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adventure"
            android:textColor="@color/cardview_dark_background" />


    </LinearLayout>

</LinearLayout>